<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/txtDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size_25dp"
        android:layout_marginLeft="@dimen/size_25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/size_25dp"
        tool:text="Today"/>

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtDay"
        app:layout_constraintTop_toBottomOf="@id/txtDay"
        android:textSize="@dimen/size_20dp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/size_6dp"
        tool:text="@string/datetime"/>

    <TextView
        android:id="@+id/txtMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime"
        android:fontFamily="@font/arial"
        android:textSize="@dimen/size_120dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/size_35dp"
        android:layout_marginTop="@dimen/size_35dp"
        tool:text="16\u00B0"/>

    <TextView
        android:id="@+id/txtMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtMaxTemp"
        app:layout_constraintStart_toStartOf="@id/txtMaxTemp"
        app:layout_constraintEnd_toEndOf="@id/txtMaxTemp"
        android:textSize="@dimen/size_80dp"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        tool:text="3\u00B0"/>

    <TextView
        android:id="@+id/txtHumindity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tool:text="@string/humidity"
        android:textSize="@dimen/size_25dp"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/size_18dp"
        app:layout_constraintStart_toStartOf="@id/txtDay"
        app:layout_constraintTop_toBottomOf="@id/txtMinTemp"
        />

    <TextView
        android:id="@+id/txtPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tool:text="@string/pressure"
        android:textSize="@dimen/size_25dp"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/txtDay"
        app:layout_constraintTop_toBottomOf="@id/txtHumindity"
        />

    <TextView
        android:id="@+id/txtWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tool:text="@string/wind"
        android:textSize="@dimen/size_25dp"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/txtDay"
        app:layout_constraintTop_toBottomOf="@id/txtPressure"
        />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tool:text="@string/location"
        android:textSize="@dimen/size_25dp"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/txtDay"
        app:layout_constraintTop_toBottomOf="@id/txtWind"
        />

    <ImageView
        android:id="@+id/imgWeather"
        android:layout_width="@dimen/size_180dp"
        android:layout_height="@dimen/size_180dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtMaxTemp"
        app:layout_constraintBottom_toBottomOf="@id/txtMaxTemp"
        tool:src="@drawable/art_clear"/>

    <TextView
        android:id="@+id/txtWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_30dp"
        app:layout_constraintTop_toTopOf="@id/txtMinTemp"
        app:layout_constraintBottom_toBottomOf="@id/txtMinTemp"
        app:layout_constraintStart_toStartOf="@id/imgWeather"
        app:layout_constraintEnd_toEndOf="@id/imgWeather"
        tool:text="@string/clear"/>

</androidx.constraintlayout.widget.ConstraintLayout>