<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/today"
    android:background="@color/toolbar">

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size_35dp"
        android:layout_marginLeft="@dimen/size_35dp"
        tool:text="@string/time"
        android:fontFamily="@font/arial"
        android:textSize="@dimen/size_25dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txtMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtTime"
        app:layout_constraintTop_toBottomOf="@id/txtTime"
        tool:text="16\u00B0"
        android:gravity="bottom"
        android:textColor="@color/white"
        android:fontFamily="@font/arial"
        android:textSize="@dimen/size_80dp"/>

    <TextView
        android:id="@+id/txtMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txtMaxTemp"
        app:layout_constraintBottom_toBottomOf="@id/txtMaxTemp"
        tool:text="4\u00B0"
        android:textSize="@dimen/size_35dp"
        android:layout_marginBottom="@dimen/size_18dp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imgWeather"
        android:layout_width="@dimen/size_120dp"
        android:layout_height="@dimen/size_120dp"
        app:layout_constraintTop_toTopOf="@id/txtTime"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/size_18dp"
        tool:src="@drawable/art_clear"/>

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtMaxTemp"
        app:layout_constraintTop_toBottomOf="@id/txtMaxTemp"
        tool:text="@string/location"
        android:fontFamily="@font/arial"
        android:textSize="@dimen/size_25dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txtWeather"
        android:layout_width="@dimen/size_120dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/imgWeather"
        app:layout_constraintTop_toBottomOf="@id/txtMaxTemp"
        android:gravity="center_horizontal"
        tool:text="@string/clear"
        android:fontFamily="@font/arial"
        android:textSize="@dimen/size_25dp"
        android:textColor="@color/white"/>




</androidx.constraintlayout.widget.ConstraintLayout>